bk_ida/gccida/g2/get_exception_pointer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_exception_pointer/src/except.c:1510:25: error: use of undeclared identifier 'machine_mode'
result = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_exception_pointer/src/obj/except.o] Error 1
